--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -62,6 +62,11 @@ header {
     letter-spacing: 0.3px;
     margin-right: 8px;
 
+    .demo {
+      color: $red;
+      font-weight: 600;
+    }
+
     ul {
       height: 78px;
       display: flex;
