--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5,14 +5,18 @@ $black: #484848;
 $green: rgb(0, 132, 137);
 
 main {
-  position: relative;
+  position: absolute;
+  box-sizing: border-box;
+  padding: 0 80px;
+  width: 100%;
   top: 115px;
   color: $black;
-  padding: 0 80px;
 
   .bg {
-    height: 440px;
+    height: 450px;
     background-image: url('https://img00.deviantart.net/d49a/i/2013/115/8/a/middle_earth___theme_park_by_lunatteo-d631h0n.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
   }
 
