--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body, header, footer, aside, section, article, nav, div, span,
-input, button, h1, h2, h3, h4, h5, p, a, ul, li, img {
+input, textarea, button, h1, h2, h3, h4, h5, p, a, ul, li, img {
   margin: 0;
   padding: 0;
   color: inherit;
