--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -11,5 +11,5 @@ input, textarea, button, h1, h2, h3, h4, h5, p, a, ul, li, img {
   list-style: none;
   text-decoration: none;
   outline: none;
-  // border: 0.1px solid red;
+  border: 0.1px solid red;
 }
