--- a/app/assets/stylesheets/spots_index.scss
+++ b/app/assets/stylesheets/spots_index.scss
@@ -15,27 +15,21 @@ section {
 .spot-index {
   color: $black;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-flow: wrap;
   margin: 12px 80px 50px;
 
-  li {
+  .spot-index-item {
     margin: 8px 8px 12px;
 
-    img {
-      display: block;
-      width: 330px;
-      box-sizing: border-box;
-      border-radius: 4px;
+    li {
+      
     }
   }
 
-  li:first-child {
-    margin-left: 0;
-  }
-
-  li:last-child {
-    margin-right: 0;
+  img {
+    display: block;
+    width: 100%;
+    border-radius: 4px;
   }
 }
 
