--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,86 +1,34 @@
-$lightgrey: #DBDBDB;
-$red: #FF5A5F;
-$darkred: rgb(223, 60, 71);
-$black: #484848;
-$green: rgb(0, 132, 137);
-$blue: #008489;
-$yellow: #995c1f;
+@import 'colors';
 
 header {
   top: 0;
   position: fixed;
-  width: 100%;
   z-index: 1;
+  width: 100%;
+  height: 80px;
   display: flex;
   justify-content: space-between;
   background-color: white;
-  height: 80px;
-  font-size: 14px;
   border-bottom: 1px solid $lightgrey;
 
-  >div {
+  .logo-search-box {
     display: flex;
     align-items: center;
-  }
 
-  .logo {
-    box-sizing: border-box;
-    width: 80px;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 600;
-    color: $red;
-  }
-
-  .search-bar {
-    color: $black;
-    display: flex;
-    width: 460px;
-    height: 48px;
-    box-sizing: border-box;
-    border: 1px solid $lightgrey;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
-    img {
-      padding: 10px 14px 10px 15px;
-      width: 28px;
-      height: 28px;
-    }
-
-    input {
-      letter-spacing: 0.5px;
-      width: 411px;
-      font-size: 16px;
-      line-height: 22px;
-      border: none;
-    }
-
-    .search-result {
-      position: absolute;
-      top: 65px;
-      width: 458px;
-      height: 348px;
+    .logo {
       box-sizing: border-box;
-      background-color: white;
-      border: 1px solid $lightgrey;
-      border-radius: 4px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      padding: 30px;
-      font-size: 15px;
+      width: 80px;
+      text-align: center;
+      font-size: 20px;
       font-weight: 600;
-      display: none;
+      color: $red;
     }
-  }
-
-  .search-bar:hover .search-result {
-    display: block;
   }
 
   nav {
     color: $black;
-    letter-spacing: 0.3px;
     margin-right: 8px;
+    font-size: 14px;
 
     .demo {
       color: $red;
@@ -90,33 +38,35 @@ header {
 
     ul {
       display: flex;
+      list-style: none;
     }
 
     li {
-      height: 78px;
+      line-height: 78px;
+      box-sizing: border-box;
       margin: 0 8px;
       border-bottom: 2px solid transparent;
-    }
 
-    li:hover {
-      border-bottom: 2px solid grey;
-    }
+      &:hover {
+        border-bottom: 2px solid grey;
+      }
 
-    a {
-      display: table-cell;
-      vertical-align: middle;
-      height: 78px;
-      padding: 0 8px;
+      a {
+        display: block;
+        padding: 0px 8px;
+      }
     }
   }
 }
 
-@media screen and (max-width: 1050px) {
-  nav ul li{
+@media screen and (max-width: 1020px) {
+  nav .hide {
     display: none;
   }
+}
 
-  nav .group {
-    display: inline-block;
+@media screen and (max-width: 850px) {
+  nav {
+    display: none;
   }
 }
