--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -1,4 +1,3 @@
-// Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
@@ -7,9 +6,15 @@ input, textarea, button, h1, h2, h3, h4, h5, p, a, ul, li, img {
   margin: 0;
   padding: 0;
   color: inherit;
-  font-family: sans-serif;
-  list-style: none;
+  font-family: 'Varela Round', sans-serif;
+  font-size: inherit;
+  color: inherit;
   text-decoration: none;
   outline: none;
-  border: 0.1px solid red;
+  // border: 0.1px solid red;
+}
+
+body {
+  position: relative;
+  top: 80px;
 }
