Updated Spot Form

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -3,5 +3,6 @@ $red: #FF5A5F;
 $darkred: rgb(223, 60, 71);
 $black: #484848;
 $green: rgb(0, 132, 137);
+$darkgreen: #006a70;
 $blue: #008489;
 $yellow: #995c1f;
