--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -28,10 +28,8 @@
     display: block;
   }
 
-  img {
-    padding: 10px 15px;
-    width: 28px;
-    height: 28px;
+  i {
+    padding: 15px 20px;
   }
 
   input {
