--- a/app/assets/stylesheets/spot_form.scss
+++ b/app/assets/stylesheets/spot_form.scss
@@ -2,21 +2,24 @@
 
 .spot-form-container {
   color: $black;
+  height: 720px;
   background-image: url('http://www.pngmart.com/files/3/Legolas-PNG-File.png');
   background-repeat: no-repeat;
-  background-size: 622px 720px;
-  background-position: right;
+  background-position: bottom right;
+  background-size: contain;
 
-  .spot-form {
-    padding: 50px 480px 0 100px;
+  .spot-form-box {
+    padding: 40px 0;
+    padding-left: 80px;
 
     h2 {
-      font-size: 32px;
+      display: inline-block;
+      font-size: 30px;
     }
 
     form {
       font-size: 18px;
-      padding: 30px 30px 0 0;
+      padding: 30px 0;
 
       label {
         color: grey;
@@ -24,10 +27,10 @@
 
       input, textarea {
         color: $black;
-        margin: 10px 0;
+        margin: 8px 0;
         display: block;
         height: 50px;
-        width: 100%;
+        width: 45%;
         box-sizing: border-box;
         padding: 20px;
         border: 1px solid $lightgrey;
@@ -46,9 +49,14 @@
       div {
         display: flex;
         justify-content: space-between;
+        width: 45%;
+
+        input{
+          width: 100%;
+        }
 
         label:last-child {
-          margin-left: 30px;
+          margin-left: 50px;
         }
       }
 
@@ -58,6 +66,7 @@
         justify-content: flex-end;
 
         button {
+          border: none;
           padding: 16px 20px;
           background-color: $green;
           color: white;
@@ -68,6 +77,24 @@
             background-color: $darkgreen;
           }
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .spot-form-container {
+    background: none;
+    display: grid;
+    justify-content: center;
+
+    .spot-form-box form {
+      input, textarea {
+        width: 85%;
+      }
+
+      div {
+        width: 85%;
       }
     }
   }
