--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -1,17 +1,44 @@
 @import 'colors';
 
 .spot-show-banner {
+  font-size: 14px;
+
   img {
     width: 100%;
-    height: 368px;
+    max-height: 552px;
   }
 
-  .edit-spot {
+  .edit-save {
     position: absolute;
-    top: 50px;
-    right: 50px;
-    font-size: 30px;
-    color: $red;
+    top: 0;
+    right: 0;
+    padding: 25px;
+
+    .edit {
+      padding: 10px 22px;
+    }
+
+    .save {
+      padding: 10px 17px;
+      margin-left: 20px;
+    }
+  }
+
+  .view {
+    position: relative;
+    left: 20px;
+    bottom: 60px;
+    padding: 10px 16px;
+  }
+
+  button {
+    cursor: pointer;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+    &:active {
+      background-color: $lightgrey;
+    }
   }
 }
 
@@ -20,7 +47,6 @@
   flex-wrap: wrap;
   margin: 0 30px;
   padding: 24px;
-  height: 900px;
 
   .spot-show-info {
     flex-grow: 2;
@@ -42,5 +68,13 @@
     height: 355px;
     box-sizing: border-box;
     padding: 24px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .spot-show-banner {
+    img {
+      min-height: 368px;
+    }
   }
 }
