--- a/app/assets/stylesheets/spots_index.scss
+++ b/app/assets/stylesheets/spots_index.scss
@@ -11,13 +11,21 @@
   .spot-index {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin: 10px 80px 50px;
+    margin: 10px 72px 50px;
 
     .spot-index-item {
       list-style: none;
       margin: 8px 8px 12px;
+      overflow: hidden;
+
+      li {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
 
       img {
+        min-height: 110px;
+        max-height: 210px;
         width: 100%;
         border-radius: 4px;
       }
@@ -44,5 +52,47 @@
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .spot-index-container {
+    .spot-index {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .spot-index-container {
+    .spot-index {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+@media screen and (max-width: 1130px) {
+  .spot-index-container {
+    h2 {
+      margin: 35px 30px 0;
+    }
+
+    .spot-index {
+      margin: 10px 24px 50px;
+    }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .spot-index-container {
+    .spot-index {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
+
+@media screen and (max-width: 830px) {
+  nav {
+    display: none;
   }
 }
