--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -1,80 +1,188 @@
 @import 'colors';
 
-.spot-show-banner {
-  font-size: 14px;
+.spot-show-container {
+  color: $black;
 
-  img {
-    width: 100%;
-    max-height: 552px;
-  }
-
-  .edit-save {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 25px;
-
-    .edit {
-      padding: 10px 22px;
-    }
-
-    .save {
-      padding: 10px 17px;
-      margin-left: 20px;
-    }
-  }
-
-  .view {
-    position: relative;
-    left: 20px;
-    bottom: 60px;
-    padding: 10px 16px;
-  }
-
-  button {
-    cursor: pointer;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
-    &:active {
-      background-color: $lightgrey;
-    }
-  }
-}
-
-.spot-show-box {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 30px;
-  padding: 24px;
-
-  .spot-show-info {
-    flex-grow: 2;
-    margin: 0 8px;
-    padding-right: 80px;
-  }
-
-  .spot-show-review {
-    ul {
-      display: flex;
-      flex-direction: column;
-      margin: 30px;
-    }
-  }
-
-  .spot-show-booking {
-    border: 1px solid $lightgrey;
-    flex-grow: 1;
-    height: 355px;
-    box-sizing: border-box;
-    padding: 24px;
-  }
-}
-
-@media screen and (max-width: 750px) {
   .spot-show-banner {
+    position: relative;
+    font-size: 14px;
+
     img {
-      min-height: 368px;
+      width: 100%;
+      max-height: 550px;
+    }
+
+    .box {
+      .hide-text {
+        display: inline-block;
+      }
+    }
+
+    .box-1 {
+      position: absolute;
+      top: 0;
+      right: 0;
+      padding: 25px;
+
+      .edit {
+        margin-right: 18px;
+      }
+    }
+
+    .box-2 {
+      position: absolute;
+      padding: 20px;
+      bottom: 0;
+    }
+
+    button {
+      padding: 10px 18px;
+      cursor: pointer;
+      border-radius: 4px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+      &:active {
+        background-color: $lightgrey;
+      }
+    }
+  }
+
+  .spot-show-box {
+    font-size: 16px;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
+    margin: 0 30px;
+    padding: 22px 27px;
+
+    .spot-show-info {
+      flex-grow: 2;
+
+      div {
+        .landscape {
+          color: $yellow;
+        }
+
+        h3 {
+          font-size: 32px;
+          line-height: 42px;
+        }
+
+        .location {
+          font-size: 18px;
+          margin-bottom: 40px;
+        }
+
+        .description {
+          margin-top: 32px;
+
+          p {
+            display: block;
+            padding: 24px 20px;
+            border: 1px solid $lightgrey;
+            border-radius: 4px;
+          }
+        }
+      }
+    }
+
+    .review-container {
+      .review-search-bar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-bottom: 18px;
+        border-bottom: 1px solid $lightgrey;
+
+        h4 {
+          font-size: 24px;
+
+          span {
+            font-size: 28px;
+            color: $blue;
+          }
+        }
+
+        .search-bar {
+          width: 185px;
+          height: 32px;
+          border: 1px solid $lightgrey;
+          border-radius: 2px;
+          box-shadow: none;
+          padding: 1px 0;
+
+          i {
+            padding: 7px;
+          }
+
+          input {
+            width: 100%;
+            font-size: 14px;
+            line-height: 26px;
+            border: none;
+          }
+        }
+      }
+    }
+
+    .spot-show-booking {
+      border: 1px solid $lightgrey;
+      flex-grow: 1;
+      height: 365px;
+      width: 306px;
+      box-sizing: border-box;
+      padding: 20px 24px;
+      margin-left: 60px;
+
+      .info {
+        padding-bottom: 12px;
+        border-bottom: 1px solid $lightgrey;
+
+        .price {
+          font-size: 22px;
+          font-weight: bold;
+        }
+
+        .rating {
+          color: $blue;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 940px) {
+  .spot-show-container {
+    .spot-show-box {
+      padding: 0;
+      margin: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .spot-show-container {
+    .spot-show-banner {
+      img {
+        min-height: 368px;
+      }
+
+      .box {
+        .hide-text {
+          display: none;
+        }
+      }
+
+      .box-2 {
+        right: 0;
+      }
+    }
+
+    .spot-show-box {
+      .spot-show-booking {
+        margin: 0;
+        padding: 0;
+      }
     }
   }
 }
