--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -2,44 +2,47 @@
 
 .spot-show-container {
   color: $black;
+  height: 1600px;
 
   .spot-show-banner {
     position: relative;
     font-size: 14px;
+    max-height: 552px;
+    overflow: hidden;
 
     img {
+      display: block;
       width: 100%;
-      max-height: 550px;
+      max-height: 600px;
     }
 
     .box {
-      .hide-text {
-        display: inline-block;
+      position: absolute;
+      padding: 20px;
+
+      .hide {
+        display: inline;
       }
     }
 
     .box-1 {
-      position: absolute;
       top: 0;
       right: 0;
-      padding: 25px;
-
-      .edit {
-        margin-right: 18px;
-      }
     }
 
     .box-2 {
-      position: absolute;
-      padding: 20px;
       bottom: 0;
     }
 
+    button:first-child {
+      margin-right: 18px;
+    }
+
     button {
-      padding: 10px 18px;
-      cursor: pointer;
+      padding: 8px 16px;
       border-radius: 4px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border: 1px solid $black;
+      cursor: pointer;
 
       &:active {
         background-color: $lightgrey;
@@ -47,16 +50,16 @@
     }
   }
 
-  .spot-show-box {
+  .spot-show-body {
     font-size: 16px;
     display: flex;
     flex-flow: wrap;
     justify-content: center;
-    margin: 0 30px;
-    padding: 22px 27px;
+    margin: 20px 10px;
 
     .spot-show-info {
-      flex-grow: 2;
+      width: 600px;
+      box-sizing: border-box;
 
       div {
         .landscape {
@@ -66,15 +69,23 @@
         h3 {
           font-size: 32px;
           line-height: 42px;
+
+          .edit {
+            color: $green;
+
+            &:hover {
+              text-decoration: underline;
+            }
+          }
         }
 
         .location {
           font-size: 18px;
-          margin-bottom: 40px;
+          margin-bottom: 38px;
         }
 
         .description {
-          margin-top: 32px;
+          margin: 30px 0 0;
 
           p {
             display: block;
@@ -91,7 +102,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding-bottom: 18px;
+        padding: 25px 0;
         border-bottom: 1px solid $lightgrey;
 
         h4 {
@@ -109,7 +120,6 @@
           border: 1px solid $lightgrey;
           border-radius: 2px;
           box-shadow: none;
-          padding: 1px 0;
 
           i {
             padding: 7px;
@@ -117,22 +127,17 @@
 
           input {
             width: 100%;
-            font-size: 14px;
-            line-height: 26px;
-            border: none;
           }
         }
       }
     }
 
     .spot-show-booking {
-      border: 1px solid $lightgrey;
-      flex-grow: 1;
       height: 365px;
-      width: 306px;
-      box-sizing: border-box;
+      width: 326px;
+      border: 1px solid $lightgrey;
       padding: 20px 24px;
-      margin-left: 60px;
+      margin-left: 64px;
 
       .info {
         padding-bottom: 12px;
@@ -151,37 +156,18 @@
   }
 }
 
-@media screen and (max-width: 940px) {
-  .spot-show-container {
-    .spot-show-box {
-      padding: 0;
-      margin: 0;
-    }
-  }
-}
-
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 640px) {
   .spot-show-container {
     .spot-show-banner {
-      img {
-        min-height: 368px;
-      }
-
       .box {
-        .hide-text {
+        .hide {
           display: none;
         }
       }
-
-      .box-2 {
-        right: 0;
-      }
     }
-
-    .spot-show-box {
+    .spot-show-body {
       .spot-show-booking {
-        margin: 0;
-        padding: 0;
+        margin-left: 0;
       }
     }
   }
