--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -2,7 +2,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body, header, footer, aside, section, article, nav, div, span,
-input, textarea, button, h1, h2, h3, h4, h5, p, a, ul, li, img {
+label, input, textarea, button, h1, h2, h3, h4, h5, p, a, ul, li, img {
   margin: 0;
   padding: 0;
   color: inherit;
@@ -10,7 +10,7 @@ input, textarea, button, h1, h2, h3, h4, h5, p, a, ul, li, img {
   font-size: inherit;
   text-decoration: none;
   outline: none;
-  // border: 0.1px solid red;
+  // border: 0.1px solid red !important;
 }
 
 body {
