--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -2,7 +2,6 @@
 
 .spot-show-container {
   color: $black;
-  height: 1600px;
 
   .spot-show-banner {
     position: relative;
@@ -18,7 +17,7 @@
 
     .box {
       position: absolute;
-      padding: 20px;
+      padding: 10px;
 
       .hide {
         display: inline;
@@ -34,11 +33,8 @@
       bottom: 0;
     }
 
-    button:first-child {
-      margin-right: 18px;
-    }
-
     button {
+      margin: 10px;
       padding: 8px 16px;
       border-radius: 4px;
       border: 1px solid $black;
@@ -160,6 +156,8 @@
   .spot-show-container {
     .spot-show-banner {
       .box {
+        right: 0;
+
         .hide {
           display: none;
         }
