--- a/app/assets/stylesheets/spot_form.scss
+++ b/app/assets/stylesheets/spot_form.scss
@@ -34,6 +34,14 @@
         }
       }
     }
+
+    .errors {
+      color: $red;
+
+      ul {
+        list-style: none;
+      }
+    }
   }
 
   .spot-form-box {
@@ -85,7 +93,7 @@
       }
 
       textarea {
-        height: 120px;
+        height: 200px;
         resize: none;
       }
     }
