--- a/app/assets/stylesheets/spots_index.scss
+++ b/app/assets/stylesheets/spots_index.scss
@@ -49,6 +49,10 @@
         .star {
           color: $blue;
         }
+
+        .lightgrey {
+          color: $lightgrey;
+        }
       }
     }
   }
