Added Review create

--- a/app/assets/stylesheets/404.scss
+++ b/app/assets/stylesheets/404.scss
@@ -2,7 +2,7 @@
 
 .not-found {
   height: 720px;
-  background-image: url('http://www.pngmart.com/files/3/Gandalf-Transparent-PNG.png');
+  background-image: image_url('gandalf.png');
   background-repeat: no-repeat;
   background-position: bottom left;
   background-size: contain;
