--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -6,3 +6,11 @@ $green: rgb(0, 132, 137);
 $darkgreen: #006a70;
 $blue: #008489;
 $yellow: #995c1f;
+
+.lightgrey {
+  color: $lightgrey;
+}
+
+.blue {
+  color: $blue;
+}
