--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -34,12 +34,16 @@
   }
 
   .create-review-box {
-    padding: 20px;
+    padding: 10px 20px 20px;
     border-bottom: 1px solid $lightgrey;
 
     .create-review-form {
       div {
         padding: 10px;
+      }
+
+      .rating {
+        padding-bottom: 0;
       }
 
       label {
@@ -49,10 +53,17 @@
       }
 
       span {
-        margin: 5px;
+        margin-right: 10px;
+      }
+
+      .err {
+        position: absolute;
+        padding: 0 10px;
+        list-style: none;
       }
 
       .review-body-box {
+        margin-top: 10px;
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
