--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -100,6 +100,9 @@
       border: 1px solid $lightgrey;
       padding: 20px 24px;
       margin-left: 64px;
+      position: sticky;
+      position: -webkit-sticky;
+      top: 100px;
 
       .info {
         padding-bottom: 12px;
