--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import 'react-dates/lib/css/_datepicker.css';
 
 .spot-show-container {
   color: $black;
@@ -111,6 +112,50 @@
         .price {
           font-size: 22px;
           font-weight: bold;
+        }
+      }
+
+      .booking-form-container {
+        .booking-date-calendar {
+          margin: 20px 0;
+        }
+
+        .booking-guests {
+          select {
+            display: block;
+            height: 40px;
+          }
+        }
+
+        ul {
+          margin: 20px 0 0;
+          list-style: none;
+        }
+
+        div {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+        }
+
+        .button-box {
+          p {
+            text-align: center;
+          }
+
+          button {
+            margin: 20px 0 10px;
+            color: white;
+            background-color: $red;
+            padding: 12px 24px;
+            border-radius: 4px;
+            border: none;
+            width: 100%;
+
+            &:active {
+              background-color: $darkred;
+            }
+          }
         }
       }
     }
