Added Booking delete

--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -106,9 +106,7 @@
           padding: 15px 0;
           border-bottom: 1px solid $lightgrey;
 
-          p {
-            cursor: pointer;
-
+          a {
             &:hover {
               color: $blue;
               text-decoration: underline;
