Set up Search and Map

--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -96,7 +96,7 @@
     }
 
     .spot-show-booking {
-      height: 500px;
+      height: 100%;
       width: 326px;
       border: 1px solid $lightgrey;
       padding: 20px 24px;
