--- a/app/assets/stylesheets/spots_index.scss
+++ b/app/assets/stylesheets/spots_index.scss
@@ -10,7 +10,7 @@
 
   .spot-index {
     display: grid;
-    margin: 10px 72px 50px;
+    margin: 10px 72px;
 
     .spot-index-item {
       list-style: none;
