--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
     <title>Met | Middle-earth travel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
+    <% myAPIkey = 'AIzaSyClvtFmhtccsPnzfIx5zOrT9c5YM6lr26E' %>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{myAPIkey}" %>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
