Set up Marker and filter and minor fixes

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -1,6 +1,8 @@
 @import 'colors';
 
 .review-container {
+  margin-bottom: 40px;
+
   .review-search-bar {
     display: flex;
     justify-content: space-between;
