--- a/app/assets/stylesheets/spot_map.scss
+++ b/app/assets/stylesheets/spot_map.scss
@@ -1,13 +1,15 @@
 @import 'colors';
 
-.spot-map-container {
-  display: flex;
-  justify-content: center;
-  margin: 20px 0 70px;
+.homepage {
+  .spot-map-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0 70px;
 
-  #map-container {
-    border: 1px solid $lightgrey;
-    width: 85vw;
-    height: 50vh;
+    #map-container {
+      border: 1px solid $lightgrey;
+      width: 85vw;
+      height: 50vh;
+    }
   }
 }
