--- a/app/assets/stylesheets/spot_form.scss
+++ b/app/assets/stylesheets/spot_form.scss
@@ -14,7 +14,7 @@
       position: -webkit-sticky;
       top: 100px;
 
-      .map {
+      .map-container {
         width: 400px;
         height: 300px;
       }
