--- a/app/assets/stylesheets/spot_map.scss
+++ b/app/assets/stylesheets/spot_map.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 
 .homepage {
-  .spot-map-container {
+  .map-container {
     display: flex;
     justify-content: center;
     margin: 20px 0 70px;
