--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -59,6 +59,10 @@
       width: 600px;
       box-sizing: border-box;
 
+      .hide {
+        display: none;
+      }
+
       div {
         .landscape {
           color: $yellow;
