--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -8,7 +8,7 @@
   margin: 60px 0;
 
   .promo {
-    padding: 0 40px 40px;
+    padding: 0 65px 40px;
     display: flex;
     justify-content: center;
 
@@ -116,6 +116,25 @@
 
         div:last-child {
           border: 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .booking-index-container {
+    .promo {
+      padding: 0;
+      flex-direction: column-reverse;
+      align-items: center;
+
+      .ad {
+        align-items: center;
+        padding: 0 0 10px;
+
+        h2 {
+          display: none;
         }
       }
     }
