Styled Search Bar

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -5,6 +5,7 @@ $black: #484848;
 $green: rgb(0, 132, 137);
 $darkgreen: #006a70;
 $blue: #008489;
+$lightblue: rgb(204, 238, 235);
 $yellow: #995c1f;
 
 .lightgrey {
