--- a/app/assets/stylesheets/spots_index.scss
+++ b/app/assets/stylesheets/spots_index.scss
@@ -31,6 +31,7 @@
           min-height: 110px;
           max-height: 210px;
           width: 100%;
+          height: 100%;
           border-radius: 4px;
         }
       }
