--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -30,9 +30,24 @@
       display: block;
       padding: 30px 35px 15px;
 
-      h1 {
-        font-weight: bold;
-        margin-bottom: 25px;
+      div {
+        display: flex;
+        justify-content: space-between;
+
+        h1 {
+          font-weight: bold;
+          margin-bottom: 10px;
+        }
+
+        p {
+          height: 100%;
+          color: $blue;
+          cursor: pointer;
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
       }
 
       li {
@@ -57,6 +72,7 @@
     width: 100%;
     display: flex;
     align-items: center;
+    padding-right: 13px;
 
     input {
       width: 100%;
@@ -64,11 +80,5 @@
       line-height: 22px;
       border: none;
     }
-  }
-
-  span {
-    padding: 13px;
-    cursor: pointer;
-    color: grey;
   }
 }
