Updated and fixed major features

--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -27,8 +27,7 @@
 
     .errors {
       position: absolute;
-      color: $red;
-      top: 250px;
+      width: 100%;
 
       ul {
         list-style: none;
