--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -10,9 +10,8 @@
     display: flex;
     justify-content: center;
     margin: 20px 0;
-    // display: none;
-
-    #map-container {
+    
+    #map {
       border: 1px solid $lightgrey;
       border-radius: 4px;
       width: 85vw;
