--- a/app/assets/stylesheets/spot_form.scss
+++ b/app/assets/stylesheets/spot_form.scss
@@ -15,7 +15,7 @@
       top: 100px;
 
       .map-container {
-        #map-container {
+        #map {
           border-radius: 4px;
           width: 400px;
           height: 300px;
