--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -98,6 +98,15 @@
           }
         }
       }
+
+      .map-container {
+        #map {
+          border-radius: 4px;
+          width: 100%;
+          height: 300px;
+          margin-bottom: 50px;
+        }
+      }
     }
 
     .spot-show-booking {
