--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -88,14 +88,14 @@
         }
 
         .description {
-          margin: 30px 0 0;
+          margin: 30px 0;
 
           p {
             display: block;
             padding: 24px 20px;
             border: 1px solid $lightgrey;
             border-radius: 4px;
-            word-wrap: break-word;
+            word-break: break-all;
           }
         }
       }
@@ -105,7 +105,6 @@
           border-radius: 4px;
           width: 100%;
           height: 300px;
-          margin-bottom: 50px;
         }
       }
     }
