--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-flow: column;
   margin: 60px 0;
+  align-items: center;
 
   .promo {
     padding: 0 40px 40px;
@@ -53,6 +54,12 @@
       background-position: bottom;
       background-size: contain;
     }
+  }
+
+  .title {
+    font-size: 30px;
+    font-weight: 100;
+    margin: 30px 0;
   }
 
   .booking-index-list {
