--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -72,6 +72,7 @@
         h3 {
           font-size: 32px;
           line-height: 42px;
+          word-break: break-all;
 
           .edit {
             color: $green;
