--- a/app/assets/stylesheets/spots_index.scss
+++ b/app/assets/stylesheets/spots_index.scss
@@ -50,7 +50,7 @@
   }
 }
 
-@media screen and (max-width: 1600px) {
+@media screen {
   .spot-index-container .spot-index {
     grid-template-columns: repeat(4, 1fr);
   }
